dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dummy-app
  labels:
    name: dummy-app
