dev/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: dummy-app
  name: dummy-app
  namespace: dummy-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: dummy-app
  template:
    metadata:
      labels:
        name: dummy-app
    spec:
      containers:
          image: yeasy/simple-web
          name: my-dummy-app
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
      restartPolicy: Always
